# FeynmanDAG

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: conf.py  index.rst
docs/api/: index.rst
docs/api/algorithm/: index.rst
docs/api/diagrams/: index.rst
docs/api/interaction/: index.rst
docs/api/particles/: index.rst
docs/contributors/: index.rst
src/FeynmanDAG/: __init__.py  algorithm.py  diagrams.py  interaction.py  particles.py
src/FeynmanDAG/kinematics/: DiracAlgebra.py  GammaMatrix.py  Lorentz.py  Momentum.py  ParticleSpinor.py  Polarisation.py  __init__.py  helper.py  utils.py
tests/: test_package.py
