[metadata]
name = FeynmanDAG
description = Simple Feynman diagram generation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.hzdr.de/hernan68/feynmandag
author = Uwe Hernandez Acosta
author_email = u.hernandez@hzdr.de
maintainer = Uwe Hernandez Acosta
maintainer_email = u.hernandez@hzdr.de
license = MIT
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
project_urls =
    Documentation = https://FeynmanDAG.readthedocs.io/
    Bug Tracker = https://gitlab.hzdr.de/hernan68/feynmandag/issues
    Discussions = https://gitlab.hzdr.de/hernan68/feynmandag/discussions
    Changelog = https://gitlab.hzdr.de/hernan68/feynmandag/releases

[options]
packages = find:
install_requires =
    typing-extensions>=3.7;python_version<'3.8'
python_requires = >=3.7
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6
    pytest-cov>=3
docs =
    Sphinx>=4.0
    myst-parser>=0.13
    sphinx-book-theme>=0.1.0
    sphinx-copybutton
test =
    pytest>=6
    pytest-cov>=3

[flake8]
extend-ignore = E203, E501, E722, B950
select = C,E,F,W,T,B,B9,I
per-file-ignores =
    tests/*: T
    noxfile.py: T
